
@startuml

[*] -> TEST
state TEST{
TEST : **global entry** : __global_on_enter()__
TEST : > catch global on enter\n
TEST : **global exit** : __global_on_exit()__
TEST : > catch global on exit\n


[*] -> State1

State1 : **Entry** / __State1_on_enter()__
State1 : > catch state1 on enter\n
State1 : **Exit** / __State1_on_exit()__
State1 : > catch state1 on exit\n
State1 --> State2 : Event_1_2 || Event1 [ condition2 ]

State1 --> State3 : Event1 [ condition3 ]



State2 : **Entry** / __State2_on_enter()__
State2 : > catch state2 on enter\n
State2 : **Exit** / __State2_on_exit()__
State2 : > catch state2 on exit\n
State2 --> State1 : Event2 [ condition1 ]

State2 --> State3 : Event2 [ condition3 ]



State3 : **Entry** / __State3_on_enter()__
State3 : > catch state3 on enter\n
State3 : **Exit** / __State3_on_exit()__
State3 : > catch state3 on enter\n

}

@enduml
